# rulz-ai

./: .credentials  .credentials_rsaparams  .dockerignore  .env  .env.development.local  .env.development.local.example  .env.local  .env.local.example  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .path  .pylintrc  .runner  CNAME  Dockerfile  Dockerfile.python  LICENSE  Makefile  README.md  SECURITY.md  ai-plugin.json  anonymousId  azure  chatbot_logic.py  checkly.config.ts  checks-metrics.json  cli2.py  config.json  credential.json  data.dvc  date_bot.py  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  download.sh  ds_config.json  email-192748.ts  (+28 more)
.circleci/: config.yml
.dvc/: config  package-lock.json
.github/: dependabot.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  instruction_visualize_gpt4_checkpoint.ipynb  main_plots_checkpoint.ipynb
.next/: BUILD_ID  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
.rasa/: README.md  config.yml  domain.yml  events.db  story_graph.dot
CVinW/: README.md
NOAA-RTMA-DATASET/: README.md
Seq2Seq/: 01_preprocessing.py  02_training.py  03_chatting.py  README.md  app.py  attention_decoder.py
__checks__/: heartbeat-check-1.check.ts  homepage.spec.ts  https-rulz-ai-com.check.ts  https-rulz-ai-com.spec.ts  https-rulz-ai.check.ts  https-rulz-ai.spec.ts  rulz-ai.check.ts  rulz-ai.spec.ts  rulz-ai.tf  rulz-dashboard.ts
alpaca/: lengths.ipynb
chatterbot/: chatterbot.ipynb  index.html
colabs/: gpt_4_system_card.ipynb
cookbook/: Ollama.ipynb
coremltools-venv/: pyvenv.cfg
data/: rulz-ai.yaml
docs/: google_search.md
g4f/: __init__.py  models.py  test.py  typing.py
k8s/: dvc.yaml  gpt-3.5-turbo.yaml  openapi.yaml  rulz-ai.yaml  schema-base.yaml  sysdig.yaml  wnb.yaml
langchain/: chain.py
magenta/: __init__.py
magenta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pages/: _app.tsx  _document.tsx  index.tsx  login.tsx  profile.tsx
plots/: main_plots.ipynb  (+1 more)
(+572 files in other folders)
