[tool.poetry]
name = "Rulz-AI"
version = "4"
description = "Rulz-AI is a high-quality mixture model."
authors = ["Reborn"]
license = "BSD-3-Clause license"
readme = "README.md"
packages = [{include = "3"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

model="gpt-4",
[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Reborn Rulz <reborn@rulz-ai.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
openai = "^1.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"